--- a/tipsyapp/static/ang/index.html
+++ b/tipsyapp/static/ang/index.html
@@ -16,8 +16,8 @@
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" ></script>
   <!--hello-->
 
-</head>
+<link rel="stylesheet" href="styles.css"></head>
   <body>
     <app-root></app-root>
-  <script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+  <script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
